--- a/theme/index.html
+++ b/theme/index.html
@@ -44,7 +44,7 @@
           <div class="row">
               <div class="col-lg-8 col-md-8">
                 <ul class="top-info text-center text-md-left">
-                    <li><i class="fas fa-map-marker-alt"></i> <p class="info-text">9051 Constra Incorporate, USA</p>
+                    <li><i class="fas fa-map-marker-alt"></i> <p class="info-text">Deklycom Contractors and Supplies Limited</p>
                     </li>
                 </ul>
               </div>
@@ -93,7 +93,7 @@
                     <div class="info-box">
                       <div class="info-box-content">
                           <p class="info-box-title">Call Us</p>
-                          <p class="info-box-subtitle">(+9) 847-291-4353</p>
+                          <p class="info-box-subtitle">+254 720 530456</p>
                       </div>
                     </div>
                   </li>
@@ -101,15 +101,15 @@
                     <div class="info-box">
                       <div class="info-box-content">
                           <p class="info-box-title">Email Us</p>
-                          <p class="info-box-subtitle">office@Constra.com</p>
+                          <p class="info-box-subtitle">deklycomcontractors@gmail.com</p>
                       </div>
                     </div>
                   </li>
                   <li class="last">
                     <div class="info-box last">
                       <div class="info-box-content">
-                          <p class="info-box-title">Global Certificate</p>
-                          <p class="info-box-subtitle">ISO 9001:2017</p>
+                          <p class="info-box-title">NCA Certificate</p>
+                          <p class="info-box-subtitle">ISO ........</p>
                       </div>
                     </div>
                   </li>
@@ -228,7 +228,7 @@
         <div class="container h-100">
           <div class="row align-items-center h-100">
               <div class="col-md-12 text-center">
-                <h2 class="slide-title" data-animation-in="slideInLeft">17 Years of excellence in</h2>
+                <h2 class="slide-title" data-animation-in="slideInLeft">12 Years of excellence in</h2>
                 <h3 class="slide-sub-title" data-animation-in="slideInRight">Construction Industry</h3>
                 <p data-animation-in="slideInLeft" data-duration-in="1.2">
                     <a href="services.html" class="slider btn btn-primary">Our Services</a>
