--- a/theme/index.html
+++ b/theme/index.html
@@ -83,7 +83,7 @@
           <div class="row align-items-center">
             <div class="logo col-lg-3 text-center text-lg-left mb-3 mb-md-5 mb-lg-0">
                 <a class="d-block" href="index.html">
-                  <img loading="lazy" src="images/logo.png" alt="Constra">
+                  <img loading="lazy" src="images/logo_d.png" alt="Constra">
                 </a>
             </div><!-- logo end -->
   
@@ -228,7 +228,8 @@
         <div class="container h-100">
           <div class="row align-items-center h-100">
               <div class="col-md-12 text-center">
-                <h2 class="slide-title" data-animation-in="slideInLeft">13 Years of excellence in</h2>
+                <h2 class="slide-title" data-animation-in="slideInLeft">13
+                  Years of excellence in</h2>
                 <h3 class="slide-sub-title" data-animation-in="slideInRight">Construction Industry</h3>
                 <p data-animation-in="slideInLeft" data-duration-in="1.2">
                     <a href="services.html" class="slider btn btn-primary">Our Services</a>
